[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/chordz.ogg" type="AudioStream" id=1]
[ext_resource path="res://Assets/twinkle-synth.ogg" type="AudioStream" id=2]
[ext_resource path="res://Assets/tense-bass.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/drone-bass.ogg" type="AudioStream" id=4]
[ext_resource path="res://GodPoolGame/Game/MusicMan.gd" type="Script" id=5]
[ext_resource path="res://GodPoolGame/Game/MusicChan.tscn" type="PackedScene" id=6]

[node name="Node" type="Node"]
script = ExtResource( 5 )

[node name="DroneBass" parent="." instance=ExtResource( 6 )]
stream = ExtResource( 4 )

[node name="Chordz" parent="." instance=ExtResource( 6 )]
stream = ExtResource( 1 )

[node name="TwinkleSynth" parent="." instance=ExtResource( 6 )]
stream = ExtResource( 2 )
bus = "Delay"
playback_volume = -10.0

[node name="TenseBass" parent="." instance=ExtResource( 6 )]
stream = ExtResource( 3 )
